# powerbi-dataset-refresher

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.json  config.example.yaml  diagnose_permissions.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/hooks/: spec-to-confluence.kiro.hook
.kiro/specs/powerbi-refresh-script/: .config.kiro  design.md  requirements.md  tasks.md
docs/: .gitkeep  azure-setup.md  docker-usage.md  main_module_implementation.md
src/powerbi_refresh/: __init__.py  auth.py  config.py  exceptions.py  logger.py  main.py  models.py  orchestrator.py  powerbi_client.py  refresh_manager.py  retry.py
tests/: conftest.py
tests/integration/: test_cli_integration.py
tests/unit/: test_main.py  test_main_comprehensive.py
